fix: prevent horizontal shift on reload

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   background-color: #f5f7ff;
   margin: 0;
   font-size: 14px;
+  overflow-x: hidden;
 }
 
 /* === ФИЛЬТРЫ ================================================================= */
